# space_llm

./: .gitignore  CMakeLists.txt  Makefile  README.md  source
examples/vit/: CMakeLists.txt  demo_vit.cpp
llms/zhilight/: CMakeLists.txt  Makefile  setup.py  source  version.py
llms/zhilight/src/: CMakeLists.txt
llms/zhilight/src/core/: context.cpp  engine.cpp  engine.h  guard.cpp  layer.h  logger.h  stream.cpp  tensor.cpp  tensor.h  tensor_impl.cpp  thread_pool.cpp
llms/zhilight/src/functions/: all.h  element.cu  element.h  gemm.cpp  gemm.h  index_select.cu  init.cu  init.h  list.h  reduce.cuh  softmax.cu  tensor_ops.cu  utils.cuh
llms/zhilight/src/generator/: generator.h
llms/zhilight/src/kvcache/: block_allocator.h
llms/zhilight/src/logger/: kernel_time_trace.hpp  std_log_op.hpp
llms/zhilight/src/model/: allocate_util.hpp  llama.cpp  llama.h  model.h  model_config.hpp  model_context.h
llms/zhilight/src/nn/: nn.h
llms/zhilight/src/nn/attention/: attention.h  attention_kernel.cu  attention_kernel.h
llms/zhilight/src/nn/embedding/: embedding.h
llms/zhilight/src/nn/tests/: test_attention_rag_buffer.cpp
llms/zhilight/src/private/: allocator.h  engine.h
llms/zhilight/src/py_export/: CMakeLists.txt  bind.cpp  bind.h  bind_internal.cpp  layer_embedding.cpp  py_utils.cpp  py_utils.h
llms/zhilight/src/space_llm/core/: allocator.cpp  context.h  core.h  dtype.h  exception.cpp  exception.h  export.h  guard.h  layer.cpp  logger.cpp  stream.h  tensor_print.cpp  thread_pool.h  utils.h
llms/zhilight/src/space_llm/functions/: index_select.h  softmax.h  typecast.cu  typecast.h
llms/zhilight/src/space_llm/kvcache/: kvcache.h  paged_kvcache.h
llms/zhilight/src/space_llm/model/: buffer_context.h  model_util.h
llms/zhilight/src/space_llm/nn/attention/: quant_attention.cuh
llms/zhilight/src/space_llm/nn/block/: block.h
llms/zhilight/src/space_llm/private/: context.h  guard.h  memory.cpp  memory.h  stream.h  tensor_impl.h  tensor_ops.h
llms/zhilight/src/utils/: env.h
llms/zhilight/tests/: CMakeLists.txt  test_allocator.cpp  test_element.cpp  test_embedding.py  test_gemm.cpp  test_index_select.cpp  test_print_tensor.cpp  test_softmax.cpp  test_template.cpp
llms/zhilight/tests/py_export_internal/: CMakeLists.txt  bind_internal.h  layer_embedding.cpp
script/: export.py  (+3 more)
src/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  add_residual_kernels.cu  add_residual_kernels.h  ban_bad_words.cu  ban_bad_words.h  decoder_masked_multihead_attention.cu  decoder_masked_multihead_attention.h  decoder_masked_multihead_attention_utils.h  decoding_kernels.cu  decoding_kernels.h  gpt_kernels.cu  gpt_kernels.h  int8_utils.cuh  layernorm_kernels.cu  layernorm_kernels.h  penalty_types.h  preprocess_kernels.cu  preprocess_kernels.h  reduce_kernel_utils.cuh  sampling_penalty_kernels.cu  sampling_penalty_kernels.h  sampling_topk_kernels.cu  sampling_topk_kernels.h  sampling_topp_kernels.cu  sampling_topp_kernels.h  stop_criteria_kernels.cu  stop_criteria_kernels.h  transpose_int8_kernels.cu  transpose_int8_kernels.h  unfused_attention_kernels.cu  unfused_attention_kernels.h  vit_kernels.cu  vit_kernels.h
src/kernels/decoder_masked_multihead_attention/: decoder_masked_multihead_attention_112.cu  decoder_masked_multihead_attention_128.cu  decoder_masked_multihead_attention_144.cu  decoder_masked_multihead_attention_160.cu  decoder_masked_multihead_attention_192.cu  decoder_masked_multihead_attention_224.cu  decoder_masked_multihead_attention_256.cu  decoder_masked_multihead_attention_32.cu  decoder_masked_multihead_attention_48.cu  decoder_masked_multihead_attention_64.cu  decoder_masked_multihead_attention_80.cu  decoder_masked_multihead_attention_96.cu  decoder_masked_multihead_attention_template.hpp
src/layers/: BaseLayer.h  CMakeLists.txt  DynamicDecodeBaseLayer.h  DynamicDecodeLayer.cc  DynamicDecodeLayer.h  ffnLayer.cc  ffnLayer.h  ffnWeight.h
src/layers/attention_layers/: AttentionWeight.h  BaseAttentionLayer.h  CMakeLists.txt  DecoderCrossAttentionLayer.cc  DecoderCrossAttentionLayer.cu  DecoderCrossAttentionLayer.h  DecoderSelfAttentionLayer.cc  DecoderSelfAttentionLayer.h  GptContextAttentionLayer.cc  GptContextAttentionLayer.h  TensorParallelDecoderSelfAttentionLayer.cc  TensorParallelDecoderSelfAttentionLayer.h  TensorParallelGeluFfnLayer.cc  TensorParallelGeluFfnLayer.h  TensorParallelGptContextAttentionLayer.cc  TensorParallelGptContextAttentionLayer.h  TensorParallelReluFfnLayer.cc  TensorParallelReluFfnLayer.h  UnfusedAttentionLayer.cc  UnfusedAttentionLayer.h
src/layers/sampling_layers/: BaseSamplingLayer.cc  BaseSamplingLayer.h  CMakeLists.txt  TopKSamplingLayer.cu  TopKSamplingLayer.h  TopPSamplingLayer.cu  TopPSamplingLayer.h
src/models/decoding/: CMakeLists.txt  Decider.cc  Decoder.cc  Decoder.h  DecoderLayerWeight.h  Decoding.cc  Decoding.h  DecodingWeight.h
src/models/gpt/: CMakeLists.txt  Gpt.cc  Gpt.h  GptContextDecoder.cc  GptContextDecoder.h  GptDecoder.cc  GptDecoder.h  GptDecoderLayerWeight.cc  GptDecoderLayerWeight.h  GptWeight.cc  GptWeight.h  gpt.h
src/models/multi_gpu_gpt/: CMakeLists.txt  ParallelGpt.cc  ParallelGpt.h  ParallelGptContextDecoder.cc  ParallelGptContextDecoder.h  ParallelGptDecoder.cc  ParallelGptDecoder.h  ParallelGptDecoderLayerWeight.cc  ParallelGptDecoderLayerWeight.h  ParallelGptWeight.cc  ParallelGptWeight.h
src/models/vit/: CMakeLists.txt  ViT.cc  ViT.h  ViTLayerWeight.h  ViTWeight.h
src/utils/: CMakeLists.txt  INIReader.h  activation_types.h  allocator.h  conv2d.h  cublasAlgoMap.cc  cublasAlgoMap.h  cublasMMWrapper.cc  cublasMMWrapper.h  cuda_bf16_wrapper.h  cuda_type_utils.cuh  cuda_utils.cc  cuda_utils.h  denseWeight.h  gemm.cc  gemm.h  logger.cc  logger.h  memory_utils.cu  memory_utils.h  prompt_learning.h  string_utils.h  tensor.cc  tensor.h
tests/unittests/: CMakeLists.txt  gtest_utils.h  test_activation.cu  test_attention_kernels.cu  test_gemm.cu  test_gpt_kernels.cu  test_int8.cu  test_layernorm.cu  test_sampling_kernels.cu  test_sampling_layer.cu  test_tensor.cu  unittest_utils.h
(+20 files in other folders)
